@@ -1,0 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+  <dict>
+    <key>Label</key>
+    <string>info.kilabit.rescached</string>
+    <key>ProgramArguments</key>
+    <array>
+      <string>/usr/local/bin/rescached</string>
+      <string>-config</string>
+      <string>/etc/rescached/rescached.cfg</string>
+    </array>
+    <key>RunAtLoad</key>
+    <true/>
+    <key>KeepAlive</key>
+    <true/>
+    <key>StandardOutPath</key>
+    <string>/var/log/rescached.log</string>
+    <key>StandardErrorPath</key>
+    <string>/var/log/rescached.error</string>
+  </dict>
+</plist>
